--- a/index.css
+++ b/index.css
@@ -292,7 +292,7 @@ footer h3 {
 .options {
     display: flex;
     justify-content: space-evenly;
-    height: 70vh;
+    height: auto;
     align-items: center;
     flex-direction: column;
     background-color:white;
