--- a/index.css
+++ b/index.css
@@ -323,6 +323,7 @@ footer h3 {
     font-weight: bold;
     font-size: 30px;
     text-align: center;
+    margin: 1.5rem 0;
 }
 
 .programs {
@@ -330,6 +331,7 @@ footer h3 {
     justify-content: space-evenly;
     width: 100%;
     flex-wrap: wrap;
+    margin-bottom: 1rem;
 }
 
 .program-GWC img {
