--- a/index.css
+++ b/index.css
@@ -629,6 +629,7 @@ footer h3 {
 
     .vision-title {
         align-items: flex-start;
+        margin: 25px 0 10px 0;
     }
 
     .front-image {
